# gwcat

./: .gitignore  README.md  gwcat_forward_handoff_for_claude.md  pyproject.toml
docs/: codex_gpt56_sol_handoff.md
examples/: all_cbc_workflow.md  bbh_workflow.md  make_fake_store.py  tutorial_fake_data.md
gwcat/: __init__.py  bbh_allowed_names.py  catalog.py  cli.py  cosmology.py  event_metadata.py  fetch.py  fetch_cache.py  ingest.py  population_samples.py  schema.py  selection.py  source_class.py  spin.py  validation_summary.py  waveform_policy.py
gwcat/data/event_lists/: bbh_o1o2.txt  bbh_o3a.txt  bbh_o3b.txt  bbh_o4a.txt  bbh_o4b.txt  non_bbh_exclusions.txt  provenance.yaml
gwcat/manifests/: __init__.py
gwcat/manifests/injections/: o1o2o3o4.yaml  o3-bbh.yaml  o4ab.yaml
gwcat/manifests/releases/: gwtc-2p1.yaml  gwtc-3.yaml  gwtc-4p1.yaml  gwtc-5.yaml
tests/: test_catalog_selection.py  test_cli.py  test_cosmology.py  test_export_darksirens.py  test_fetch_hardening.py  test_fetch_registry.py  test_manifest_loading.py  test_population_samples.py  test_posterior_schema.py  test_pr11_cli.py  test_pr11_metadata_cli.py  test_prior_contract.py  test_selection.py  test_selection_cbc.py  test_source_class_filters.py  test_validation_summary.py  test_waveform_policy.py
tests/fixtures/: broken_manifest_missing_field.yaml  fake_release_manifest.yaml
